tests/src/errors/methodDestructure/arr.spec.6.ts
{
	const arr = [1, 2, 3, 4];
	const i: "isEmpty" = "isEmpty";
	const { isEmpty: f } = arr;
}
export {};
